--- a/env.yml
+++ b/env.yml
@@ -3,7 +3,6 @@ name: congater-fusion
 dependencies:
   - python=3.9.16
   - pytorch=2.0.0
-  - adapter-transformers=3.2.0
   - pandas=1.5.3
   - matplotlib
   - seaborn
@@ -15,4 +14,6 @@ dependencies:
 
   - pip:
     - adapter-transformers=3.2.0
+    - pylint
+    - black
 
