--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,8 @@
 name: congater-fusion
+channels:
+  - conda-forge
+  - nvidia
+  - pytorch
 
 dependencies:
   - python=3.9.16
@@ -11,9 +15,10 @@ dependencies:
   - scikit-learn
   - datasets
   - evaluate
+  - pip
 
   - pip:
-    - adapter-transformers=3.2.0
+    - adapter-transformers==3.2.0
     - pylint
     - black
-
+    - wandb
