add ProPETL-Adapter + Compacter scripts

--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: congater-fusion-2
+name: congater-fusion-propetl
 channels:
   - conda-forge
   - nvidia
@@ -22,7 +22,6 @@ dependencies:
     - black
     - wandb
     - plotly
-    - torchinfo
     - torchinfo
     - plotly-express
     - kaleido
